--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .hero{
     height: 100vh;
     width: 100;
-    background-image: url(../portfillo//images/img8.jpg);
+    background-image: url(../images/img8.jpg);
     background-size: cover;
     background-position: center;
 }
